--- a/frontend/templates/Dashboard.html
+++ b/frontend/templates/Dashboard.html
@@ -73,7 +73,7 @@
 
   <div id="createEventBox" class="create-event-box hidden">
   <input type="text" id="eventName" placeholder="Event Name">
-  <input type="date" id="eventDate">
+  <input type="date" id="eventDate" placeholder="Event Date">
 
  <!-- Invite Alumni -->
 <div class="invite-alumni-row">
