--- a/frontend/templates/Chat.html
+++ b/frontend/templates/Chat.html
@@ -33,9 +33,11 @@
       Select All
     </label>
   </div>
-
+  <div id="loader" class="loader hidden"></div>
+<div id="alumniGrid"></div>
   <!-- ALUMNI LIST -->
   <div class="alumni-list" id="alumniList">
+ 
     <!-- Alumni cards loaded from Firestore -->
   </div>
 
