--- a/frontend/templates/Dashboard.html
+++ b/frontend/templates/Dashboard.html
@@ -49,9 +49,7 @@
             <input type="text" id="alumniSearch" placeholder="Search by name, year, or company...">
         </div>
                   <!-- Loading Bar -->
-<div id="loadingBarContainer" class="loading-container hidden">
-  <div id="loadingBar" class="loading-bar"></div>
-</div>
+  <div id="loader" class="loader hidden"></div>
         <div class="alumni-grid" id="alumniGrid">
 
     <!-- Alumni cards will load here dynamically -->
