--- a/frontend/static/css/Chat.css
+++ b/frontend/static/css/Chat.css
@@ -219,12 +219,10 @@ body{
 /* ================= ALUMNI LIST ================= */
 .alumni-list{
     width:100%;
-    background:white;
     border-radius:14px;
     padding:15px;
     max-height:400px;
     overflow-y:auto;
-    box-shadow:0 5px 20px rgba(0,0,0,.08);
     margin-bottom:20px;
 }
 
@@ -338,6 +336,7 @@ body{
   background: rgb(232, 244, 255);
   border-radius: 10px;
   padding: 12px 16px;
+  border: 1px solid #0055ff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
   transition: 
     background 0.2s ease,
@@ -348,9 +347,9 @@ body{
 /* Hover effect */
 .card:hover {
   background: rgb(232, 244, 255);
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 8px 20px #a2b8ff;
   transform: translateY(-3px);
-  border: 1px solid #34aaf8;
+  border: 3px solid #34aaf8;
 }
 
 /* ===== CARD TOP (ROW) ===== */
@@ -469,3 +468,24 @@ body{
   background-color: #f44336; /* red for error */
 }
 
+
+
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #e5e7eb;
+  border-top: 5px solid #4f46e5;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: 40px auto;
+}
+
+.hidden {
+  display: none;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
