--- a/frontend/static/css/about_us.css
+++ b/frontend/static/css/about_us.css
@@ -56,7 +56,7 @@ gap: 30px;
 .register-link {
 color: var(--white);
 text-decoration: none;
-font-family: sans-serif;
+font-family: math;
 font-size: 18px;
 font-weight: 700;
 padding: 8px 20px;
