--- a/frontend/templates/FrontPage.html
+++ b/frontend/templates/FrontPage.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="logo">SGDTP Alumni Portal</div>
         <nav class="nav">
-            <a href="/templates/Events.html"  target="_blank" class="login-link" >See Events</a>
+            <a href="{{ url_for('showevent') }}"  target="_blank" class="login-link" >See Events</a>
            <a href="{{ url_for('login') }}"  target="_blank" class="login-link" >Login</a>
            <a href="{{ url_for('register') }}"  target="_blank" class="register-link" >Register</a>
         </nav>
@@ -25,7 +25,7 @@
                 your gateway to reconnect with your SGDTP, network with fellow alumni, 
                 and stay updated with campus news and events
             </p>
-         <a href="/templates/about_us.html" class="about-button">About us</a>
+         <a href="{{ url_for('about') }}" class="about-button">About us</a>
         </div>
         <div class="content-right">
     <div class="illustration-placeholder">
