--- a/frontend/templates/login_page.html
+++ b/frontend/templates/login_page.html
@@ -16,6 +16,7 @@
         <nav class="nav">
            <a href="{{ url_for('login') }}" class="login-link">Login</a>
            <a href="{{ url_for('register') }}" class="register-link">Register</a>
+           <a href="{{ url_for('admin') }}" class="login-link">Admin Login</a>
         </nav>
     </header>
 
